<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <GVL Name="NcAxis_GVL" Id="{20959dfc-4621-4990-a644-86123eb1a246}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
    testAxis : AXIS_REF;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>