<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <POU Name="DS402NC" Id="{2efa25f8-c88e-4801-8524-c79bfb67df92}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM DS402NC
VAR
    fbMotionLogger : FB_MotionLogger;
    // Persistant storage
    fbPersistentDataStorage : FB_PersistentDataStorage;

    //Brakes : brake fb participate in sync comm with fbMotionDrive, fbMotionAxis and fbMotionInterlocks
    fbBrake : FB_Brake := (BrakeMode := E_StageBrakeMode.IF_MOVING);
    // common interlocks
    fbMotionInterlocksCommon : FB_MotionInterlocksCommon ( iMotionLogger:=fbMotionLogger);
    // stage with Limit switches
    fbLimSwStatusMCS2 : FB_LimSwStatusMCS2 ( );
    fbMotionInterlocksLimSw : FB_MotionInterlocksLimSw ( iMotionInterlocksCommon:=fbMotionInterlocksCommon, iLimSwStatus:=fbLimSwStatusMCS2);

    fbHomeDS402 : FB_HomeDS402(iMotionLogger:=fbMotionLogger);
    fbHaltNC : FB_HaltNC(AxisRef:=NcAxis_GVL.testAxis);
    fbPowerNC : FB_PowerNC(AxisRef:=NcAxis_GVL.testAxis);
    fbResetNC : FB_ResetNC(AxisRef:=NcAxis_GVL.testAxis);
    fbMoveAbsoluteNC : FB_MoveAbsoluteNC(AxisRef:=NcAxis_GVL.testAxis);
   {attribute 'pytmc':='pv: TST:SmartAct:MCS2-3C'}
    {attribute 'TcLinkTo' := '.nRawEncoderDINT :=TIID^Master_EtherCAT^MCS2-3C^Module 1 (MCS2M-D-3C)^mode/status/pos/fError TxPDO^Position Actual Value'}
    fbAxisParametersNC: FB_AxisParametersNC(AxisRef:=NcAxis_GVL.testAxis, iPersistentDataStorage := fbPersistentDataStorage);
    fbAxisStatusNC : FB_AxisStatusNC(AxisRef:=NcAxis_GVL.testAxis);

    fbBacklashCompensation : FB_BacklashCompensation(AxisRef:=NcAxis_GVL.testAxis);
    (*The axis object has a interlock reference in this instance: this would make calling method
      to transfer power status from interlock interface override the internal passing of power enable status
      the powerenables() is provided in case the interlock status were passed via the drive
      nonetheless passing via this object is more flexible
    *)
	{attribute 'pytmc':='pv: TST:SmartAct:MCS2-3C'}
    {attribute 'TcLinkTo' := '
        .stDS402Drive.stDriveStatus	:=TIID^Master_EtherCAT^MCS2-3C^Module 1 (MCS2M-D-3C)^mode/status/pos/fError TxPDO^Status Word;
        .stDS402Drive.nFollowingError		:=TIID^Master_EtherCAT^MCS2-3C^Module 1 (MCS2M-D-3C)^mode/status/pos/fError TxPDO^Following Error Actual Value;
        .stDS402Drive.nModeOfOperationDisplay:=TIID^Master_EtherCAT^MCS2-3C^Module 1 (MCS2M-D-3C)^mode/status/pos/fError TxPDO^Modes of Operation Display;
        .stDS402Drive.nDS402DriveControl	:=TIID^Master_EtherCAT^MCS2-3C^Module 1 (MCS2M-D-3C)^ctl/mode/pos/vel/acc RxPDO^Control Word;
        .stDS402Drive.nModeOfOperation		:=TIID^Master_EtherCAT^MCS2-3C^Module 1 (MCS2M-D-3C)^ctl/mode/pos/vel/acc RxPDO^Modes of Operation;
        .stDS402Drive.nTargetPosition		:=TIID^Master_EtherCAT^MCS2-3C^Module 1 (MCS2M-D-3C)^ctl/mode/pos/vel/acc RxPDO^Target Position;
    '}
    fbMotionAxisDS402NC : FB_MotionAxisDS402NC( 	iHome := fbHomeDS402,
                                        iHalt := fbHaltNC,
                                        iPower := fbPowerNC,
                                        iReset := fbResetNC,
                                        iMoveAbsolute := fbMoveAbsoluteNC,
                                        iAxisParameters:= fbAxisParametersNC,
                                        iAxisStatus := fbAxisStatusNC,
                                        iBacklashCompensation :=fbBacklashCompensation,
                                    );

   M1 : ST_MotionEpicsItf := (sName:='Main Axis', fPosition:=10000.0, fVelocity:=50.0, fAcceleration:=50.0, fDeceleration:=50.0);
   fbMotionDrive: FB_MotionDrive ( stMotionEpicsItf := M1,
                                   iBrake:=fbBrake,
                                   iMotionLogger:=fbMotionLogger,
                                   iMotionInterlocks:=fbMotionInterlocksLimSw,
                                   iMotionAxis := fbMotionAxisDS402NC
                                   ) := (Name := 'SmarAct MCS2',  EnableMode:=ENUM_StageEnableMode.DURING_MOTION );


    bHardEnable AT %Q*: BOOL := TRUE;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[]]></ST>
    </Implementation>
  </POU>
</TcPlcObject>